# misis2023f-22-01-nurgaliev-r-d

./: CMakeLists.txt  README.md  codeforces.id  status.md
docs/: KV.cpp  redis.cpp  report.md
prj.codeforces/: 0371c.cpp  0478c.cpp  0507b.cpp  0545d.cpp  0550c.cpp  0569a.cpp  0706b.cpp  1165d.cpp  1352b.cpp  1355d.cpp  1363b.cpp  1365b.cpp  1369b.cpp  1371b.cpp  1372c.cpp  1389b.cpp  1389c.cpp  1409d.cpp  1476b.cpp  1490c.cpp  1509C  1509c.cpp  1538f.cpp  1542b.cpp  1742d.cpp  CMakeLists.txt
prj.cw/: AstMarker.cpp  AstMarker.h  CMakeLists.txt  CMakePresets.json  Doxyfile  image.cpp  image.h  main.cpp  program.cpp  program.h  text.txt
