add_executable(0550c 0550c.cpp)
add_executable(0569a 0569a.cpp)
add_executable(0706b 0706b.cpp)
add_executable(1409d 1409d.cpp)
add_executable(1490c 1490c.cpp)
add_executable(1165d 1165d.cpp)
add_executable(1365b 1365b.cpp)
add_executable(1509c 1509c.cpp)
add_executable(0507b 0507b.cpp)
add_executable(0371c 0371c.cpp)
add_executable(0478c 0478c.cpp)
add_executable(1355d 1355d.cpp)
add_executable(1389c 1389c.cpp)
add_executable(1389b 1389b.cpp)
add_executable(1372c 1372c.cpp)
add_executable(1538f 1538f.cpp)
add_executable(1476b 1476b.cpp)
add_executable(1369b 1369b.cpp)
add_executable(1363b 1363b.cpp)
add_executable(1742d 1742d.cpp)
add_executable(1352b 1352b.cpp)
add_executable(0545d 0545d.cpp)
